white-space pre-wrap added to badge and program descriptions. fixes #363

--- a/static/media/css/core.css
+++ b/static/media/css/core.css
@@ -1303,3 +1303,7 @@ body.home #cl_i_vid {
 .about .org-list {
   list-style: none;
 }
+
+p.description {
+  white-space: pre-wrap;
+}
